overlapping backgrounds + fixing margins on different sections

--- a/style.css
+++ b/style.css
@@ -6,6 +6,16 @@
 body{
     margin: 0;
     padding: 0;
+    background-color: #f4f4f4;
+
+}
+.wrap-container {
+    width: 94%;
+    margin: 0 auto; 
+    padding: 20px; 
+    background-color: white;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
+    border-radius: 8px;
 }
 
 header{
@@ -13,6 +23,22 @@ header{
     border-bottom: #e8491d 3px solid;
 
 }
+
+header .container{
+    margin-left: 40px;
+
+}
+
+/*
+header .container1.5 .custom-hr{
+    margin-top: 20px;
+    display: flex;
+    color: black;
+    justify-content: space-around;
+    align-items: center;
+        
+
+}*/
 
 header .container1, .container2{
     margin-top: 20px;
@@ -24,10 +50,7 @@ header .container1, .container2{
 
 }
 
-header .container{
-    margin-left: 40px;
 
-}
 
 
 #branding1{
@@ -77,6 +100,7 @@ header li{
     background: url(./images/showcase-art.png) no-repeat center ;
     text-align: center;
     color: black;
+    margin-bottom: -10px;
 }
 
 #showcase .cstm-f{
@@ -100,6 +124,7 @@ header li{
 
 #Products{
     margin-top: 30px;
+    background-color: #ffcc00;
 }
 
 #Products .container{
@@ -175,10 +200,14 @@ header li{
     flex-direction: column;
     justify-content: center;
     text-align: center;
+    background-color: #d8d8d8;
+    margin-bottom: -50px;
 }
 
 #background-items{
     margin-top: 50px;
+    background-color: #d8d8d8;
+    margin-bottom: -50px;
 }
 
 #background-items .bckgrnd-container{
@@ -236,7 +265,7 @@ margin-right: 100px;
 }
 */
 .snips{
-    margin-top: 50px;
+    margin-top: 90px;
 }
 
 .snips .container{
@@ -251,10 +280,14 @@ margin-right: 100px;
 
 footer{
     padding: 20px;
-    margin-top: 20px;
+    margin-top: 40px;
     color: #ffffff;
     background-color: #f8235b;
     text-align: center;
+}
+
+#footer-section{
+    margin-top: 30px;
 }
 
 #footer-section .container{
@@ -265,6 +298,34 @@ footer{
     margin: auto ;
     max-width: 1200px;
     
+}
+#footer-section .container .vertical-section4{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-top: 10px;
+}
+
+#footer-section .container .sub1-vertical-section4{
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    margin: auto;
+    max-width: 1200px;
+}
+#footer-section .container .sub2-vertical-section4{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    margin: auto;
+    max-width: 1200px;
+}
+
+#footer-section .container .sub-col{
+    margin-top: 10px;
 }
 
 #footer-mini-section{
